# pynxtools-mpes

./: .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  MANIFEST.in  README.md  config_file.json  contact.html  dev-requirements.txt  index.html  mkdocs.yaml  pyproject.toml  requirements.txt
.cspell/: custom-dictionary.txt
.github/workflows/: compatibility-with-pynxtools-release.yml  compatibility_with_pynxtools_release.yaml  mkdocs-deploy.yml  nomad-requirements.yml  publish.yml  pylint.yml  pytest.yml  spellcheck.yml
docs/: contact.md  index.md
docs/explanation/: examples.md
docs/reference/: mpes.md
docs/tutorial/: contributing.md  installation.md  standalone.md
how-tos/: build-a-reader.html
pynxtools_mpes/: mappings.py  reader.py
reference/: mpes.html
scripts/: generate_custom_dict.sh  regenerate_examples.sh
search/: search_index.json
src/pynxtools_mpes/: reader.py
src/pynxtools_mpes/nomad/: __init__.py  entrypoints.py
src/pynxtools_mpes/nomad/apps/: __init__.py
src/pynxtools_mpes/nomad/example_uploads/: __init__.py
src/pynxtools_mpes/nomad/example_uploads/example/: E1 Convert to NeXus.ipynb  E2 ARPES postprocessing.ipynb  E3 pyARPES analysis.ipynb  E4 Convert to k-space.ipynb  README.md
src/pynxtools_mpes/nomad/examples/: E1 Convert to NeXus.ipynb  MoTe.archive.json  README.md  config_file.json  config_file_MoTe2.json
src/pynxtools_mpes/nomad/lab/: dataconverter.py  mpes.mapping.json
src/pynxtools_mpes/nomad/lab/schema/: lab.schema.archive.yaml
src/pynxtools_mpes/nomad/lab/yaml/: a1.archive.yaml  i1.archive.yaml  (+2 more)
tests/: test_igor.py  test_nomad_apps.py  test_nomad_example.py  test_nomad_examples.py  test_reader.py
tests/data/: config_file.json  eln_data.yaml  example.nxs
tests/data/igor/: config_file.json
tests/data/mpes/: config_file.json
tutorial/: contributing.html  installation.html  standalone.html
(+5 files in other folders)
