[build-system]
requires = ["setuptools>=64.0.1", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pynxtools-mpes"
dynamic = ["version"]
authors = [
    { name = "Florian Dobener", email = "florian.dobener@physik.hu-berlin.de" },
]
description = ""
readme = "README.md"
license="Apache-2.0",
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pynxtools>=0.0.10"
]

[project.entry-points."pynxtools.reader"]
mpes = "pynxtools_mpes.reader:MPESReader"