[build-system]
requires = ["setuptools>=64.0.1", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pynxtools-mpes"
dynamic = ["version"]
authors = [
    { name = "Florian Dobener", email = "florian.dobener@physik.hu-berlin.de" },
    { name = "Abeer Aurora", email = "arora@fhi-berlin.mpg.de" },
    { name = "Laurenz Rettig", email = "rettig@fhi-berlin.mpg.de" },
]
description = ""
readme = "README.md"
license= {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py>=3.6.0",
    "PyYAML>=6.0",
    "xarray>=0.20.2",
    "pynxtools>=0.0.10"
]

[project.entry-points."pynxtools.reader"]
mpes = "pynxtools_mpes.reader:MPESReader"